--- a/templates/loki.service.j2
+++ b/templates/loki.service.j2
@@ -1,20 +1,15 @@
+{{ ansible_managed | comment }}
+
 [Unit]
 Description=loki Server
-After=network.target
-After=systemd-user-sessions.service
 After=network-online.target
 
 [Service]
-Type=simple
 Restart=always
+ExecStart=/usr/local/bin/loki -config.file /etc/loki.yml {{ loki_arguments | join(' ') }}
 User={{ loki_system_user }}
 Group={{ loki_system_group }}
-ExecStart=/usr/local/bin/loki -config.file /etc/loki.yml {{ loki_arguments | join(' ') }}
-WorkingDirectory=/usr/local/bin
-LimitAS=infinity
-LimitRSS=infinity
-LimitCORE=infinity
-LimitNOFILE=65536
+WorkingDirectory=/var/lib/loki
 
 [Install]
 WantedBy=multi-user.target
